--- a/index.html
+++ b/index.html
@@ -59,25 +59,55 @@
                     </nav>
 
     </header>
-    <div class="text-center fill-screen container4 home py-5" id="home" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
+    <div class="text-center fill-screen container4 home" id="home" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
         <div class="container6">
            <div class="container7">
-            <div class="bag">
-                <h4 class="wordCarousel display-4">    
-                    <span>Get more: </span>  
-                    <div class="dive"> 
-                        <ul class="flip4"> 
-                            <li class="liste text-primary">Creativity</li>
-                            <li class="liste text-primary">Coverage</li>
-                            <li class="liste text-primary">Memories</li> 
-                            <li class="liste text-primary">Engagement</li>  
-                        </ul>
-                    </div>  
-                </h4>
-           </div>
-                <h2 class="display-4 text-primary">A Creative Agency </h2>
-                <button class="bg-dark"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
-           </div>
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-sm-6 side">
+                                <h2 class="font text-primary font-weight-bolder">Open your Business to a World of Endless Audience</h1>
+                                    <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
+                                    <button class="bg-dark my-3"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
+                            </div>
+                            <aside class="col-sm-6 side-containers">
+                                <img class="side-picture" src="connections-2099068_1280.png" alt="People connecting">
+                            </aside>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="bag">
+                            <h4 class="wordCarousel">    
+                                <span class="display-4">Get more: </span>  
+                                <div class="dive"> 
+                                    <ul class="flip4"> 
+                                        <li class="liste text-primary">Creativity</li>
+                                        <li class="liste text-primary">Coverage</li>
+                                        <li class="liste text-primary">Memories</li> 
+                                        <li class="liste text-primary">Engagement</li>  
+                                    </ul>
+                                </div>  
+                            </h4>
+                       </div>
+                            <h2 class="text-primary py-3">A Tactical & Creative Social Media Marketing Agency</h2>
+                            <button class="bg-dark ml-3"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-sm-6 side">
+                                <div class="font text-primary">Ace Media is one of Nigeria's Leading Social & Digital Marketing
+                                     Agency with Audience of over 25,000 people.</div>
+                                    <button class="bg-dark my-3"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
+                            </div>
+                            <aside class="col-sm-6 side-containers">
+                                <img class="side-picture" src="social-2322108_960_720.webp" alt="People connecting">
+                            </aside>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </div>
 
@@ -97,7 +127,7 @@
         </p>
    </div>
    <div>
-      <div class="container-fluid container4 fill-screen fixed-attachment" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+      <div class="container-fluid container4 fixed-attachment" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
           <div class="container6">
               <div class="container7">
                 <div class="container" id="services" >
@@ -177,7 +207,7 @@
         </div>
     </div>
     </div>
-    <div class="container-fluid  container4 fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
+    <div class="container-fluid  container4  fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
             <div class="container6">
                 <div class="container7">
                     <div class="container" id="testimonials">
@@ -266,7 +296,7 @@
         </div>
         </div>
     </div>
-   <div class="container-fluid container4 py-3 fill-screen fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
+   <div class="container-fluid container4 py-3 fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
        <div class="container6">
            <div class="container7">
             <div class="container" id="contact">
