--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
                                     <button class="bg-dark my-3"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
                             </div>
-                            <aside class="col-sm-6 side-containers">
+                            <aside class="col-sm-6">
                                 <img class="side-picture" src="connections-2099068_1280.png" alt="People connecting">
                             </aside>
                         </div>
@@ -100,8 +100,8 @@
                                      Agency with Audience of over 25,000 people.</div>
                                     <button class="bg-dark my-3"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
                             </div>
-                            <aside class="col-sm-6 side-containers">
-                                <img class="side-picture" src="social-2322108_960_720.webp" alt="People connecting">
+                            <aside class="col-sm-6">
+                                        <img class="side-picture" src="social-2322108_960_720.webp" alt="People connecting">
                             </aside>
                         </div>
                       </div>
