--- a/index.html
+++ b/index.html
@@ -59,25 +59,27 @@
                     </nav>
 
     </header>
-    <div class="text-center fill-screen container4 home" id="home" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');">
+    <div class="text-center fill-screen container-fluid container4 home" id="home" >
         <div class="container6">
            <div class="container7">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col-sm-6 side">
-                                <h2 class="font text-primary font-weight-bolder">Open your Business to a World of Endless Audience</h1>
+                        <div class="rowe">
+                            <div class="leftt py-5">
+                                <h2 class="font text-primary py-3 font-weight-bolder">Open your Business to a World of Endless Audience</h1>
                                     <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
-                                    <button class="bg-dark my-3"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
+                                    <button class="bg-dark my-4"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
                             </div>
-                            <aside class="col-sm-6">
-                                <img class="side-picture" src="connections-2099068_1280.png" alt="People connecting">
-                            </aside>
+                            <div>
+                               <div class="side-picture pt-3">
+                                    <img  src="connections-2099068_1280.png" alt="People connecting">
+                               </div>
+                            </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="bag">
+                        <div class="bag py-4">
                             <h4 class="wordCarousel">    
                                 <span class="display-4">Get more: </span>  
                                 <div class="dive"> 
@@ -91,18 +93,20 @@
                             </h4>
                        </div>
                             <h2 class="text-primary py-3">A Tactical & Creative Social Media Marketing Agency</h2>
-                            <button class="bg-dark ml-3"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+                            <button class="bg-dark my-3"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
                       </div>
                       <div class="carousel-item">
-                        <div class="row">
-                            <div class="col-sm-6 side">
-                                <div class="font text-primary">Ace Media is one of Nigeria's Leading Social & Digital Marketing
+                        <div class="rowe">
+                            <div class="leftt">
+                                <div class="font font-weight-bolder py-5 text-primary">Ace Media is one of Nigeria's Leading Social & Digital Marketing
                                      Agency with Audience of over 25,000 people.</div>
-                                    <button class="bg-dark my-3"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
+                                    <button class="bg-dark"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
                             </div>
-                            <aside class="col-sm-6">
-                                        <img class="side-picture" src="social-2322108_960_720.webp" alt="People connecting">
-                            </aside>
+                            <div>
+                                <div  class="py-5 side-picture">
+                                        <img src="landingillustration.93ae509a.svg" alt="People connecting">
+                                </div>
+                            </div>
                         </div>
                       </div>
                     </div>
@@ -354,7 +358,10 @@
    </div>
    <!-- <div>
     <i class="fas fa-link"></i>
-    <i class="fas fa-chart-line"></i>
+<a href="https://www.freepik.com/free-photos-vectors/people">People vector created by stories - www.freepik.com</a>
+<a href="https://www.freepik.com/free-photos-vectors/people">People vector created by pch.vector - www.freepik.com</a>
+<a href="https://www.freepik.com/free-photos-vectors/infographic">Infographic vector created by pch.vector - www.freepik.com</a>
+<a href="https://www.freepik.com/free-photos-vectors/business">Business vector created by pikisuperstar - www.freepik.com</a>
     <i class="fas fa-video"></i>
     <i class="fas fa-users"></i>
     <i class="fas fa-certificate"></i>
