--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo mr-3"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="#" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo my-2"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -24,22 +24,16 @@
                               <a class="nav-link" href="#home">HOME <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#about">ABOUT</a>
+                              <a class="nav-link" href="about.html">ABOUT</a>
                             </li>
                             <li class="nav-item">
-                                 <a class="nav-link" href="#services">SERVICES</a>
+                                 <a class="nav-link" href="services.html">SERVICES</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#approach">APPROACH</a>
+                                <a class="nav-link" href="review.html">REVIEWS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#client">CLIENTS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">CONTACT</a>
+                                <a class="nav-link" href="contact.html">CONTACT</a>
                             </li> 
                             <li class="nav-item hide">
                                     <span class="social-media">
@@ -78,8 +72,8 @@
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item">
-                        <div class="bag py-4">
+                      <div class="carousel-item mid">
+                        <div class="bag pt-5">
                             <h4 class="wordCarousel">    
                                 <span class="display-4">Get more: </span>  
                                 <div class="dive"> 
@@ -92,14 +86,19 @@
                                 </div>  
                             </h4>
                        </div>
-                            <h2 class="text-primary py-3">A Tactical & Creative Social Media Marketing Agency</h2>
-                            <button class="bg-dark my-3"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
+                            <h2 class="text-primary font">A Tactical & Creative Social Media Marketing Agency</h2>
+                            <button class="bg-dark my-4"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
                       </div>
                       <div class="carousel-item">
-                        <div class="rowe">
+                        <div class="rowe pt-4">
                             <div class="leftt">
-                                <div class="font font-weight-bolder py-5 text-primary">Ace Media is one of Nigeria's Leading Social & Digital Marketing
-                                     Agency with Audience of over 25,000 people.</div>
+                                <div class="font py-4">
+                                    <h2 class="text-primary font-weight-bolder pb-3">
+                                    Ace Media is one of Nigeria's Leading Social & Digital Marketing
+                                     Agency with Audience of over 25,000 people.
+                                </h2>
+                                     <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
+                                    </div>
                                     <button class="bg-dark"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
                             </div>
                             <div>
@@ -114,248 +113,6 @@
             </div>
         </div>
     </div>
-
-   <div class="container content-filler" id="about">
-       <h2 class="display-4 py-3 text-primary">
-        about us
-       </h2>
-       <p class="story">
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, porro reiciendis reprehenderit cum vitae necessitatibus perferendis perspiciatis exercitationem 
-           est quod quaerat neque deserunt! Alias omnis vitae, reiciendis recusandae dolor iusto. <br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sunt magnam quidem, qui necessitatibus distinctio ad, 
-            nesciunt eaque dolorum doloremque hic laborum totam, quis error non quisquam soluta quod enim?<br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptatibus nesciunt provident? Commodi laborum eligendi vitae eum. 
-            Cumque impedit nemo, veritatis eveniet, quae ad quo, maxime minus dolorem fuga blanditiis?<br><br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde assumenda mollitia accusantium facere, perferendis consequuntur, delectus et veritatis
-            quae inventore vero maiores repellendus. Quod dicta, veniam incidunt ipsum aperiam aut.
-        </p>
-   </div>
-   <div>
-      <div class="container-fluid container4 fixed-attachment" style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-          <div class="container6">
-              <div class="container7">
-                <div class="container" id="services" >
-                    <h2 class="display-4 py-3">
-                            our services
-                        </h2>
-                <div class="row">
-                    <aside class="col-sm-4">
-                        <span class="logo"></span>
-                        <h3 class="sub-title">
-                            Social Media Management Services
-                        </h3>
-                        <p class="story">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                            exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                        </p>
-                    </aside>
-                    <section class="col-sm-4">
-                        <span class="logo"></span>
-                        <h3 class="sub-title">
-                            Digital Marketing Services
-                        </h3>
-                        <p class="story">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                            exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                        </p>
-                    </section>
-                    <aside class="col-sm-4">
-                        <span class="logo"></span>
-                        <h3 class="sub-title">
-                            Branding Services
-                        </h3>
-                        <p class="story">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                            exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                        </p>
-                    </aside>
-                </div>
-           </div>
-              </div>
-          </div>
-      </div>
-    <div class="container" id="approach">
-        <h2 class="display-4 text-primary py-3">our approach</h2>
-        <h3 class="under-title text-center pb-3">Three things that make us unique</h3>
-        <div class="row">
-            <aside class="col-sm-4">
-                <span class="logo"></span>
-                <h3 class="sub-title">
-                    We engage
-                </h3>
-                <p class="story">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                    exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                </p>
-            </aside>
-            <section class="col-sm-4">
-                <span class="logo"></span>
-                <h3 class="sub-title">
-                    We influence
-                </h3>
-                <p class="story">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                    exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                </p>
-            </section>
-            <aside class="col-sm-4">
-                <span class="logo"></span>
-                <h3 class="sub-title">
-                   We promote
-                </h3>
-                <p class="story">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
-                    exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                </p>
-            </aside>
-        </div>
-    </div>
-    </div>
-    <div class="container-fluid  container4  fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg'); min-height: 300px;">
-            <div class="container6">
-                <div class="container7">
-                    <div class="container" id="testimonials">
-                        <h2 class="display-4 py-3">service review</h2>
-                        <div class="carousel">
-                            <section class="slide story">
-                                <p class="story">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
-                                     non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
-                                </p>
-                                <span>
-                                    Ayo Arowle, <span class="font-weight-bold">Creative Director</span>
-                                    <code>LVO</code>
-                                    <span class="star"></span>
-                                </span>
-                            </section>
-                            <section class="slide story">
-                                <p class="text">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde soluta, accusamus hic porro odio libero vero earum error? Labore,
-                                     non. Dolor, eveniet esse similique labore ab nostrum quam cupiditate!
-                                </p>
-                                <span>
-                                    Ayoka, <span class="font-weight-bold">CEO</span>
-                                    <code>SOSO PRO MAKEUP</code>
-                                    <span class="star"></span>
-                                </span>
-                            </section>
-                        </div>    
-                </div>
-                </div>
-            </div>
-    </div>
-    <div class="container-fluid" id="client">
-        <div class="container5 container">
-            <h2 class="display-4 text-primary py-3">Our clients</h2>
-            <h3 class="sub-title text-center">
-                The people who have trusted us so far
-            </h3><br>
-            <div>
-            <div class="slides remove">
-            <div class="number">1/8</div>
-                <img class="gallery" src="bolt.png" alt="slide-show-image">
-            </div>
-            </div>
-            <div class="slides remove">
-             <div class="number">2/8</div>
-            <img class="gallery" src="nairabet.png" alt="slide-show-image">
-            </div>
-            <div class="slides remove">
-            <div class="number">3/8</div>
-            <img class="gallery" src="bull_client_7.png" alt="slide-show-image">
-            </div>
-            <div class="slides remove">
-            <div class="number">4/8</div>
-            <img class="gallery" src="BLACKBET_logo.png" alt="slide-show-image">
-            </div>
-            <div class="slides remove">
-            <div class="number">5/8</div>
-            <img class="gallery" src="aiico.jpg" alt="slide-show-image">
-            </div>
-            <div class="slides remove">
-            <div class="number">6/8</div>
-            <img class="gallery" src="socialigaa.png" alt="slide-show-image">
-            </div>
-            <div class="slides remove">
-            <div class="number">7/8</div>
-            <img class="gallery" src="airtel.jpg" alt="slide-show-image">
-            </div>
-            <div class="slides remove">
-            <div class="number">8/8</div>
-            <img class="gallery" src="DSTV-logo-214D0468CA-seeklogo.com_.png" alt="">
-            </div>
-            <a class="arrow-left" onclick="plusSlides(-1)">&#10094</a>
-            <a class="arrow-right" onclick="plusSlides(1)">&#10095</a>
-        </div>
-        <br>
-        <div style="text-align: center;">
-        <span class="do" onclick="currentSlide(1)"></span>
-        <span class="do" onclick="currentSlide(2)"></span>
-        <span class="do" onclick="currentSlide(3)"></span>
-        <span class="do" onclick="currentSlide(4)"></span>
-        <span class="do" onclick="currentSlide(5)"></span>
-        <span class="do" onclick="currentSlide(6)"></span>
-        <span class="do" onclick="currentSlide(7)"></span>
-        <span class="do" onclick="currentSlide(8)"></span>
-        </div>
-        </div>
-    </div>
-   <div class="container-fluid container4 py-3 fixed-attachment"  style="background-image: url('architecture-buildings-business-city-290595.jpg');">
-       <div class="container6">
-           <div class="container7">
-            <div class="container" id="contact">
-                <h2 class="display-4 py-4">
-                        contact us
-                    </h2>            
-                <h5 class="story">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
-                <h6 class="story">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
-                <div class="row pt-4">
-                <section class="col-sm-6">
-                            <form action="">
-                                <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
-                               <div class="row pb-2">
-                                   <div class="col-lg-6 pb-2">
-                                    <input type="text" name="firstname" required id="firstname" placeholder="first name">
-                                   </div>
-                                   <div class="col-lg-6">
-                                    <input type="text" required name="lastname" id="firstname" placeholder="last name">
-                                   </div>
-                               </div>
-                               <label for="email" class="font-weight-bold">Email <span>*</span></label><br>
-                                <div class="row pb-2">
-                                    <div class="col-lg-6 pb-2">
-                                        <input type="email" required name="email" id="email" placeholder="your email">
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <input type="email" name="email" id="email" placeholder="confirm email">
-                                    </div>
-                                </div>
-                                <label for="phone-number" class="font-weight-bold">Phone <span>*</span></label><br>
-                                <input type="tel" class="mb-3" name="phone-number" id="phone-number" placeholder="phone number"><br>
-                                <label for="name" class="font-weight-bold">Message<span>*</span></label><br>
-                                <textarea name="message" rows="5" cols="30" placeholder="YOUR MESSAGE"></textarea><br>
-                                <button type="submit" class="mt-4 mb-4 bg-dark">SUBMIT</button>
-                            </form>
-                </section>
-                <aside class="col-sm-6">
-                    <h6 class="story">Talk to us</h6>
-                    <p class="story">Call or e-mail us about your online marketing needs.</p>
-                    <div class="story">
-                       <p> <span class="icon"></span>0000-0000-000 </p>
-                       <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
-                    </div>
-                    <h6 class="story">Connect with us</h6>
-                    <div class="social-media">
-                        <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-twitter"></i></a></span>        
-                        <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-facebook"></i></a></span>
-                        <span class="insta"><a href="#" class="nav-link"><i class="fab fa-instagram "></i></a></span>
-                    </div>
-                </aside>
-            </div>
-        </div>
-        </div>
-       </div>
-   </div>
    <!-- <div>
     <i class="fas fa-link"></i>
 <a href="https://www.freepik.com/free-photos-vectors/people">People vector created by stories - www.freepik.com</a>
