--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
 
     </header>
     <div class="text-center fill-screen container-fluid container4 home" id="home" >
-        <div class="container6">
-           <div class="container7">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -63,7 +61,7 @@
                             <div class="leftt py-5">
                                 <h2 class="font text-primary py-3 font-weight-bolder">Open your Business to a World of Endless Audience</h1>
                                     <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
-                                    <button class="bg-dark my-4"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
+                                    <button class="bg-dark my-4"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
                             </div>
                             <div>
                                <div class="side-picture pt-3">
@@ -72,10 +70,10 @@
                             </div>
                         </div>
                       </div>
-                      <div class="carousel-item mid">
+                      <div class="carousel-item">
                         <div class="bag pt-5">
-                            <h4 class="wordCarousel">    
-                                <span class="display-4">Get more: </span>  
+                            <h4 class="wordCarousel font-weight-bolder">    
+                                <h5 class="text-primary">Get more: </h5>  
                                 <div class="dive"> 
                                     <ul class="flip4"> 
                                         <li class="liste text-primary">Creativity</li>
@@ -86,20 +84,23 @@
                                 </div>  
                             </h4>
                        </div>
-                            <h2 class="text-primary font">A Tactical & Creative Social Media Marketing Agency</h2>
-                            <button class="bg-dark my-4"><a class="nav-link" href="#contact">GET A FREE QUOTE <span class="icon"></span></a></button>
-                      </div>
+                            <h2 class="text-primary font-weight-bolder">A Tactical & Creative Social Media Marketing Agency</h2>
+                    <div class="side pt-3">
+                            <img src="croonials-banner-image.webp" alt="Audience">
+                    </div>
+                    <button class="bg-dark mt-3"><a class="nav-link" href="contact.html">GET A FREE QUOTE <span class="icon"></span></a></button>
+                        </div>
                       <div class="carousel-item">
                         <div class="rowe pt-4">
                             <div class="leftt">
-                                <div class="font py-4">
-                                    <h2 class="text-primary font-weight-bolder pb-3">
+                                <div class="font py-3">
+                                    <h2 class="text-primary font-weight-bolder pb-2">
                                     Ace Media is one of Nigeria's Leading Social & Digital Marketing
                                      Agency with Audience of over 25,000 people.
                                 </h2>
                                      <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
                                     </div>
-                                    <button class="bg-dark"><a class="nav-link" href="#contact">Get Started<span class="icon"></span></a></button>
+                                    <button class="bg-dark"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
                             </div>
                             <div>
                                 <div  class="py-5 side-picture">
@@ -110,8 +111,6 @@
                       </div>
                     </div>
                   </div>
-            </div>
-        </div>
     </div>
    <!-- <div>
     <i class="fas fa-link"></i>
@@ -125,6 +124,34 @@
     <i class="fas fa-envelope"></i>
     <i class="fas fa-phone-alt"></i>
    </div> -->
+  <div class="container">
+        <div class="row">
+                <div class="col-sm-6" id="here">
+                      <h2 class="text-center text-primary py-3">Here To Serve You</h2>
+                      <p class="story">
+                          Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                          Perspiciatis eaque consectetur voluptas fuga ex reiciendis quos natus asperiores,
+                           culpa expedita! Qui voluptatum nihil non alias molestias, quasi harum enim aperiam?
+                      </p>
+                </div>
+                <div class="col-sm-6">
+                        <img src="2796424.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                    <div class="col-sm-6">
+                            <img src="2796375-1.png" alt="">
+                    </div>
+                    <div class="col-sm-6" id="here">
+                          <h2 class="text-center text-primary py-3">Our Achievements Over The Years</h2>
+                          <p class="story">
+                              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                              Perspiciatis eaque consectetur voluptas fuga ex reiciendis quos natus asperiores,
+                               culpa expedita! Qui voluptatum nihil non alias molestias, quasi harum enim aperiam?
+                          </p>
+                    </div>
+                </div>
+  </div>
    <button onclick="topFunction()" id="myBtn" title="Back to top"><i class="fas fa-sort-up"></i></button>
     <footer class="container-fluid blockquote-footer text-center">
     © 2020 All rights reserved. Powered By ACE MEDIA
